--- a/about.html
+++ b/about.html
@@ -289,7 +289,7 @@
                                     sales to expert maintenance and repairs, our team is here to support your boating
                                     lifestyle.
                                 </p>
-                                <a href="/contact" id="about-contact-btn"
+                                <a href="/contact.html" id="about-contact-btn"
                                     class="btn-outline-global d-inline-flex">Contact Us</a>
                             </div>
                         </div>
@@ -510,7 +510,7 @@
                                 <p class="about-text mb-lg-4 mb-3">Thanks again for choosing Starboard Choice Marine!
                                     You can find us on the shores of Pleasant Lake in Edwardsburg, MI. We welcome our
                                     neighbors from Niles, Dowagiac, and beyond.</p>
-                                <a href="/contact" id="about-contact-btn-3"
+                                <a href="contact.html" id="about-contact-btn-3"
                                     class="btn-outline-global d-inline-flex">Contact Us</a>
                             </div>
                         </div>
