--- a/docks.html
+++ b/docks.html
@@ -271,7 +271,7 @@
     </div>
     <div class="sidebar-overlay"></div>
 
- 
+
 
     <main>
         <!-- Hero Banner Section Start -->
@@ -322,8 +322,8 @@
                         </div>
                     </div>
                     <div class="col-lg-5">
-                        <div class="">
-                            <h3 class="about-title mb-4">Hart Fabrication and Great Lakes Docks</h3>
+                        <div class="text-lg-left text-center mt-3">
+                            <h3 class="about-title mb-3">Hart Fabrication and Great Lakes Docks</h3>
                             <p class="mb-4">When it comes to boat docks, we focus on high-quality, attractive, durable, and affordable products. To that end, we are pleased to feature Hart Fabrication piers and docks, as well as Great Lakes piers. With over 30 years of experience in manufacturing and installing lakefront equipment, the team at Hart Fabrication builds low-maintenance products designed with homeowners and installers in mind. Whether you need a simple straight pier or a custom design, we can help you achieve the look and functionality you desire. Stop by Starboard Choice Marine today and discover the advantages of a new custom dock!</p>
                         </div>
                     </div>
@@ -333,7 +333,7 @@
             </div>
         </section>
         <!-- Hart Fabrication Section End -->
-        
+
         <!-- Hoist & Barge Section Start -->
         <section class="about-section my-lg-5 my-3 hoist-section">
             <div class="container-fluid px-0">
@@ -371,35 +371,35 @@
                         <div class="row">
                             <!-- Installation -->
                             <div class="col-lg-6 services-grid-item">
-                                <div class="services-img-wrapper">
-                                    <img src="./assets/images/docks/Installation.png" alt="Installation">
-                                </div>
-                                <h3 class="services-item-title mb-3">Installation</h3>
+                                    <div class="services-img-wrapper">
+                                        <img src="./assets/images/docks/Installation.png" alt="Installation">
+                                    </div>
+                                    <h3 class="services-item-title mb-3">Installation</h3>
                                 <p class="services-item-text">The team at Starboard Choice Marine can install a wide variety of lifts, including boat and personal watercraft lifts. We only offer this service to customers who store their boats at our facility, so you can count on fast and reliable service.</p>
                             </div>
                             <!-- Delivery & Transportation -->
                             <div class="col-lg-6 services-grid-item">
-                                <div class="services-img-wrapper">
+                                    <div class="services-img-wrapper">
                                     <img src="./assets/images/docks/Transportation.png" alt="Delivery & Transportation">
-                                </div>
-                                <h3 class="services-item-title mb-3">Delivery & Transportation</h3>
+                                    </div>
+                                    <h3 class="services-item-title mb-3">Delivery & Transportation</h3>
                                 <p class="services-item-text">Don’t have a lift yet? Our team can assist you in choosing the right lift for your needs. We can also deliver the equipment of your choice to almost any location – our work barge even allows us to reach areas not accessible by land!</p>
                             </div>
                             <!-- Removal Services -->
                             <div class="col-lg-6 services-grid-item">
-                                <div class="services-img-wrapper">
-                                    <img src="./assets/images/docks/Removal.png" alt="Removal Services">
-                                </div>
-                                <h3 class="services-item-title mb-3">Removal Services</h3>
+                                    <div class="services-img-wrapper">
+                                        <img src="./assets/images/docks/Removal.png" alt="Removal Services">
+                                    </div>
+                                    <h3 class="services-item-title mb-3">Removal Services</h3>
                                 <p class="services-item-text">Lift removal is quick and easy with the help of our work barge. We can expertly remove lifts from any location, without damaging your equipment in the process.
                                 </p>
                             </div>
                             <!-- Repair & Maintenance Services -->
                             <div class="col-lg-6 services-grid-item">
-                                <div class="services-img-wrapper">
+                                    <div class="services-img-wrapper">
                                     <img src="./assets/images/docks/Maintenance.png" alt="Repair & Maintenance Services">
-                                </div>
-                                <h3 class="services-item-title mb-3">Repair & Maintenance Services</h3>
+                                    </div>
+                                    <h3 class="services-item-title mb-3">Repair & Maintenance Services</h3>
                                 <p class="services-item-text">Does your lift need servicing? The team at Starboard Choice Marine can handle routine maintenance and repairs for almost any lift. No matter what kind of lift you own, it will be in good hands with our capable technicians!</p>
                             </div>
                         </div>
@@ -411,7 +411,7 @@
         <!-- Services Provided Section End -->
 
         <!-- More Info Section Start -->
-        <section class="moreinfo storage-about py-lg-5 py-3">
+        <section class="moreinfo storage-about py-lg-5 py-3 px-2">
             <div class="container px-0">
                 <div class="row no-gutters align-items-center">
                     <div class="col-lg-12 ">
@@ -461,7 +461,7 @@
             </div>
         </section>
         <!-- Request Service Form End -->
-        
+
     </main>
 
 
