--- a/mission-statement.html
+++ b/mission-statement.html
@@ -324,7 +324,7 @@
                                 <h3 class="about-title mb-4">Our Vision</h3>
                                 <p class="about-text mb-lg-4 mb-3">Not to be the biggest, but to be the best boat
                                     dealership in North America.</p>
-                                <a href="/contact" id="vision-btn" class="btn-outline-global d-inline-flex">Contact
+                                <a href="/contact.html" id="vision-btn" class="btn-outline-global d-inline-flex">Contact
                                     Us</a>
                             </div>
                         </div>
@@ -356,7 +356,7 @@
                                     success. We are driven to exceed their expectations. We live the lifestyle, as we
                                     are boaters ourselves, we believe in maintaining a healthy work / family balance.
                                 </p>
-                                <a href="/contact" id="values-btn" class="btn-outline-global d-inline-flex">Contact
+                                <a href="/contact.html" id="values-btn" class="btn-outline-global d-inline-flex">Contact
                                     Us</a>
                             </div>
                         </div>
