--- a/parts.html
+++ b/parts.html
@@ -219,8 +219,10 @@
                     <div id="mobile-company" class="accordion-body pb-3" style="display: none;">
                         <ul class="list-unstyled pl-3">
                             <li class="py-2"><a href="about.html" class="text-teal">About Us</a></li>
-                            <li class="py-2"><a href="mission-statement.html" class="text-teal">Mission Statement</a></li>
-                            <li class="py-2"><a href="gold-star-membership.html" class="text-teal">Gold Star Membership</a></li>
+                            <li class="py-2"><a href="mission-statement.html" class="text-teal">Mission Statement</a>
+                            </li>
+                            <li class="py-2"><a href="gold-star-membership.html" class="text-teal">Gold Star
+                                    Membership</a></li>
                             <li class="py-2"><a href="events-promos.html" class="text-teal">Events & Promos</a></li>
                             <li class="py-2"><a href="news-articles.html" class="text-teal">News & Articles</a></li>
                             <li class="py-2"><a href="meet-our-crew.html" class="text-teal">Meet Our Crew</a></li>
@@ -292,8 +294,12 @@
                     <div class="col-lg-11 text-center">
                         <h2 class="section-title-alt mb-lg-4 mb-3">Marine Parts You Can Count On</h2>
                         <div class="service-intro-content">
-                            <p class="mb-4">When it comes to keeping your boat running at its best, quality parts matter. At Starboard Choice Marine, our knowledgeable parts team is here to help you find the right components, accessories, and upgrades for your boat—without the guesswork.</p>
-                            <a href="#form-parts-section" id="parts-request-btn-2" class="btn-outline-teal">Request Parts</a>
+                            <p class="mb-4">When it comes to keeping your boat running at its best, quality parts
+                                matter. At Starboard Choice Marine, our knowledgeable parts team is here to help you
+                                find the right components, accessories, and upgrades for your boat—without the
+                                guesswork.</p>
+                            <a href="#form-parts-section" id="parts-request-btn-2" class="btn-outline-global">Request
+                                Parts</a>
                         </div>
                     </div>
                 </div>
@@ -311,11 +317,15 @@
                             <div class="col-lg-4 mb-lg-5 mb-3">
                                 <div class="">
                                     <div class="mb-4">
-                                        <img src="./assets/images/parts/genuine.png" class="" alt="Genuine Parts & Trusted Accessories">
+                                        <img src="./assets/images/parts/genuine.png" class=""
+                                            alt="Genuine Parts & Trusted Accessories">
                                     </div>
                                     <div>
                                         <h3 class="services-item-title mb-3">Genuine Parts & Trusted Accessories</h3>
-                                        <p class="services-item-text">We carry a wide selection of OEM and aftermarket marine parts to ensure proper fit, performance, and reliability. Whether you’re handling routine maintenance, repairs, or personalizing your boat, you can trust that our parts meet the standards your boat deserves.
+                                        <p class="services-item-text">We carry a wide selection of OEM and aftermarket
+                                            marine parts to ensure proper fit, performance, and reliability. Whether
+                                            you’re handling routine maintenance, repairs, or personalizing your boat,
+                                            you can trust that our parts meet the standards your boat deserves.
                                         </p>
                                     </div>
                                 </div>
@@ -324,11 +334,15 @@
                             <div class="col-lg-4 mb-lg-5 mb-3">
                                 <div class="">
                                     <div class="mb-4">
-                                        <img src="./assets/images/parts/support.png" class="" alt="Knowledgeable Support, No Guessing">
+                                        <img src="./assets/images/parts/support.png" class=""
+                                            alt="Knowledgeable Support, No Guessing">
                                     </div>
                                     <div>
                                         <h3 class="services-item-title mb-3">Knowledgeable Support, No Guessing</h3>
-                                        <p class="services-item-text">Not sure exactly what you need? Our experienced team is happy to help. We’ll take the time to understand your boat, engine, and application so you leave with the correct part the first time—saving you time and frustration.
+                                        <p class="services-item-text">Not sure exactly what you need? Our experienced
+                                            team is happy to help. We’ll take the time to understand your boat, engine,
+                                            and application so you leave with the correct part the first time—saving you
+                                            time and frustration.
                                         </p>
                                     </div>
                                 </div>
@@ -337,11 +351,15 @@
                             <div class="col-lg-4 mb-lg-5 mb-3">
                                 <div class="">
                                     <div class="mb-4">
-                                        <img src="./assets/images/parts/serving.png" class="" alt="Serving Edwardsburg & Beyond">
+                                        <img src="./assets/images/parts/serving.png" class=""
+                                            alt="Serving Edwardsburg & Beyond">
                                     </div>
                                     <div>
                                         <h3 class="services-item-title mb-3">Serving Edwardsburg & Beyond</h3>
-                                        <p class="services-item-text">Conveniently located on the shores of Lake Pleasant in Edwardsburg, MI, Starboard Choice Marine proudly supports boaters from Niles, Dowagiac, and surrounding areas with dependable parts and friendly service.
+                                        <p class="services-item-text">Conveniently located on the shores of Lake
+                                            Pleasant in Edwardsburg, MI, Starboard Choice Marine proudly supports
+                                            boaters from Niles, Dowagiac, and surrounding areas with dependable parts
+                                            and friendly service.
                                         </p>
                                     </div>
                                 </div>
@@ -385,8 +403,7 @@
                                         placeholder="Boat Year Make and Model">
                                 </div>
                                 <div class="col-12">
-                                    <input type="text" class="request-form-input"
-                                        placeholder="Part #(s)">
+                                    <input type="text" class="request-form-input" placeholder="Part #(s)">
                                 </div>
                                 <div class="col-12">
                                     <textarea class="request-form-input" rows="1"
