--- a/service.html
+++ b/service.html
@@ -40,7 +40,7 @@
 
 <body>
 
-    
+
     <header class="main-header">
         <div class="container-fluid px-xl-5">
             <div class="header-wrapper">
@@ -220,8 +220,10 @@
                     <div id="mobile-company" class="accordion-body pb-3" style="display: none;">
                         <ul class="list-unstyled pl-3">
                             <li class="py-2"><a href="about.html" class="text-teal">About Us</a></li>
-                            <li class="py-2"><a href="mission-statement.html" class="text-teal">Mission Statement</a></li>
-                            <li class="py-2"><a href="gold-star-membership.html" class="text-teal">Gold Star Membership</a></li>
+                            <li class="py-2"><a href="mission-statement.html" class="text-teal">Mission Statement</a>
+                            </li>
+                            <li class="py-2"><a href="gold-star-membership.html" class="text-teal">Gold Star
+                                    Membership</a></li>
                             <li class="py-2"><a href="events-promos.html" class="text-teal">Events & Promos</a></li>
                             <li class="py-2"><a href="news-articles.html" class="text-teal">News & Articles</a></li>
                             <li class="py-2"><a href="meet-our-crew.html" class="text-teal">Meet Our Crew</a></li>
@@ -315,7 +317,8 @@
                                 Choice Marine, in addition to any boats we have previously serviced or stored since
                                 January 1, 2021.</p>
                             <p class="font-weight-bold mb-5">Have questions? Give us a call at (269) 414-4351.</p>
-                            <a href="#form-service-section" id="service-request-btn-2" class="btn-outline-teal">Request Service</a>
+                            <a href="#form-service-section" id="service-request-btn-2"
+                                class="btn-outline-global">Request Service</a>
                         </div>
                     </div>
                 </div>
@@ -335,10 +338,10 @@
                         <div class="row">
                             <!-- Detailing -->
                             <div class="col-lg-6 services-grid-item">
-                                <div class="services-img-wrapper">
-                                    <img src="./assets/images/service/boat-detailing.png" alt="Boat Detailing">
-                                </div>
-                                <h3 class="services-item-title mb-3">BOAT DETAILING</h3>
+                                    <div class="services-img-wrapper">
+                                        <img src="./assets/images/service/boat-detailing.png" alt="Boat Detailing">
+                                    </div>
+                                    <h3 class="services-item-title mb-3">BOAT DETAILING</h3>
                                 <p class="services-item-text">
                                     Detailing, polishing, and waxing are not to be overlooked. These are important
                                     maintenance
@@ -353,10 +356,10 @@
                             </div>
                             <!-- Engine Repair -->
                             <div class="col-lg-6 services-grid-item">
-                                <div class="services-img-wrapper">
-                                    <img src="./assets/images/service/engine-repair.png" alt="Engine Repair">
-                                </div>
-                                <h3 class="services-item-title mb-3">ENGINE REPAIR</h3>
+                                    <div class="services-img-wrapper">
+                                        <img src="./assets/images/service/engine-repair.png" alt="Engine Repair">
+                                    </div>
+                                    <h3 class="services-item-title mb-3">ENGINE REPAIR</h3>
                                 <p class="services-item-text">
                                     Our team of six certified technicians and highly efficient service department are
                                     here to
@@ -369,10 +372,10 @@
                             </div>
                             <!-- Winterization -->
                             <div class="col-lg-6 services-grid-item">
-                                <div class="services-img-wrapper">
+                                    <div class="services-img-wrapper">
                                     <img src="./assets/images/service/boat-winterizaation.png" alt="Boat Winterization">
-                                </div>
-                                <h3 class="services-item-title mb-3">BOAT WINTERIZATION</h3>
+                                    </div>
+                                    <h3 class="services-item-title mb-3">BOAT WINTERIZATION</h3>
                                 <p class="services-item-text">
                                     Boat winterization is an important part of boat maintenance here in Michigan! This
                                     is the
@@ -388,10 +391,10 @@
                             </div>
                             <!-- Installation -->
                             <div class="col-lg-6 services-grid-item">
-                                <div class="services-img-wrapper">
-                                    <img src="./assets/images/service/installation.png" alt="Engine Installation">
-                                </div>
-                                <h3 class="services-item-title mb-3">ENGINE INSTALLATION</h3>
+                                    <div class="services-img-wrapper">
+                                        <img src="./assets/images/service/installation.png" alt="Engine Installation">
+                                    </div>
+                                    <h3 class="services-item-title mb-3">ENGINE INSTALLATION</h3>
                                 <p class="services-item-text">
                                     Installing a new engine is a great way to breathe new life into your old boat! Of
                                     course,
@@ -424,7 +427,8 @@
                                     boat with us, and you can count on it being ready for action when boating season
                                     rolls back around!
                                 </p>
-                                <a href="#form-service-section" id="storage-details-btn" class="btn-outline-global d-inline-flex">Storage Details & Requests</a>
+                                <a href="#form-service-section" id="storage-details-btn"
+                                    class="btn-outline-global d-inline-flex">Storage Details & Requests</a>
                             </div>
                         </div>
                     </div>
