--- a/specials.html
+++ b/specials.html
@@ -219,8 +219,10 @@
                     <div id="mobile-company" class="accordion-body pb-3" style="display: none;">
                         <ul class="list-unstyled pl-3">
                             <li class="py-2"><a href="about.html" class="text-teal">About Us</a></li>
-                            <li class="py-2"><a href="mission-statement.html" class="text-teal">Mission Statement</a></li>
-                            <li class="py-2"><a href="gold-star-membership.html" class="text-teal">Gold Star Membership</a></li>
+                            <li class="py-2"><a href="mission-statement.html" class="text-teal">Mission Statement</a>
+                            </li>
+                            <li class="py-2"><a href="gold-star-membership.html" class="text-teal">Gold Star
+                                    Membership</a></li>
                             <li class="py-2"><a href="events-promos.html" class="text-teal">Events & Promos</a></li>
                             <li class="py-2"><a href="news-articles.html" class="text-teal">News & Articles</a></li>
                             <li class="py-2"><a href="meet-our-crew.html" class="text-teal">Meet Our Crew</a></li>
@@ -282,96 +284,159 @@
                             <h1 class="section-title">Factory Promotions</h1>
                         </div>
                         <div class="row">
-                            
+
                             <!-- Specials -->
                             <div class="col-lg-6 services-grid-item">
-                                <div class="services-img-wrapper">
-                                    <img src="./assets/images/specials/specialsimg1.jpg" alt="Boat Detailing">
-                                </div>
+                                <a href="specials-details.html">
+                                    <div class="services-img-wrapper">
+                                        <img src="./assets/images/specials/specialsimg1.jpg" alt="Boat Detailing">
+                                    </div>
+                                </a>
                                 <p class="services-item-text"><span>Ends December 31, 2025</span></p>
-                                <h3 class="services-item-title mb-3">Mercury Win a New Outboard Giveaway!</h3>
-                                <p class="services-item-text">Here’s your chance to revive the excitement and reinvent your on-water adventures! For a limited time, you can win a new Mercury outboard. Enter by December 31, 2025, for your chance to win a new Mercury outboard up to 300hp, valued at up to $32,925. Giveaway runs from October 1in a new Mercury outboard. Enter by December 31, 2025, for your chance to win a new Mercury outboard up to 300hp, valued at up to $32,925. Giveaway runs from October 1
+                                <a href="specials-details.html">
+                                    <h3 class="services-item-title mb-3">Mercury Win a New Outboard Giveaway!</h3>
+                                </a>
+                                <p class="services-item-text">Here’s your chance to revive the excitement and reinvent
+                                    your on-water adventures! For a limited time, you can win a new Mercury outboard.
+                                    Enter by December 31, 2025, for your chance to win a new Mercury outboard up to
+                                    300hp, valued at up to $32,925. Giveaway runs from October 1in a new Mercury
+                                    outboard. Enter by December 31, 2025, for your chance to win a new Mercury outboard
+                                    up to 300hp, valued at up to $32,925. Giveaway runs from October 1
                                 </p>
                             </div>
 
                             <!-- Specials -->
                             <div class="col-lg-6 services-grid-item">
-                                <div class="services-img-wrapper">
-                                    <img src="./assets/images/specials/specialsimg2.jpg" alt="Boat Detailing">
-                                </div>
+                                <a href="specials-details.html">
+                                    <div class="services-img-wrapper">
+                                        <img src="./assets/images/specials/specialsimg2.jpg" alt="Boat Detailing">
+                                    </div>
+                                </a>
                                 <p class="services-item-text"><span>Ends March 31, 2026</span></p>
-                                <h3 class="services-item-title mb-3">Suzuki’s Five Year Factory Limited Warranty</h3>
-                                <p class="services-item-text">The standard warranty for any new Suzuki Outboard is as follows ... </p>
+                                <a href="specials-details.html">
+                                    <h3 class="services-item-title mb-3">Suzuki’s Five Year Factory Limited Warranty
+                                    </h3>
+                                </a>
+                                <p class="services-item-text">The standard warranty for any new Suzuki Outboard is as
+                                    follows ... </p>
                             </div>
 
                             <!-- Specials -->
                             <div class="col-lg-6 services-grid-item">
-                                <div class="services-img-wrapper">
-                                    <img src="./assets/images/specials/specialsimg3.jpg" alt="Boat Detailing">
-                                </div>
+                                <a href="specials-details.html">
+                                    <div class="services-img-wrapper">
+                                        <img src="./assets/images/specials/specialsimg3.jpg" alt="Boat Detailing">
+                                    </div>
+                                </a>
                                 <p class="services-item-text"><span>Ends December 31, 2025</span></p>
-                                <h3 class="services-item-title mb-3">SUZUKI REPOWER RETAIL FINANCE</h3>
-                                <p class="services-item-text">Participating Suzuki Marine Dealers are now offering special Repower Finance Rates for TIER 1 & 2 starting at 5.99% APR through Sheffield Financial for your new Repower. Click the link below to get pre-qualified with Sheffield Financial (a preferred lender of Suzuki Marine) today. Once nance Rates for TIER 1 & 2 starting at 5.99% APR through Sheffield Financial for your new Repower. Click the link below </p>
+                                <a href="specials-details.html">
+                                    <h3 class="services-item-title mb-3">SUZUKI REPOWER RETAIL FINANCE</h3>
+                                </a>
+                                <p class="services-item-text">Participating Suzuki Marine Dealers are now offering
+                                    special Repower Finance Rates for TIER 1 & 2 starting at 5.99% APR through Sheffield
+                                    Financial for your new Repower. Click the link below to get pre-qualified with
+                                    Sheffield Financial (a preferred lender of Suzuki Marine) today. Once nance Rates
+                                    for TIER 1 & 2 starting at 5.99% APR through Sheffield Financial for your new
+                                    Repower. Click the link below </p>
                             </div>
 
                             <!-- Specials -->
                             <div class="col-lg-6 services-grid-item">
-                                <div class="services-img-wrapper">
-                                    <img src="./assets/images/specials/specialsimg4.jpg" alt="Boat Detailing">
-                                </div>
+                                <a href="specials-details.html">
+                                    <div class="services-img-wrapper">
+                                        <img src="./assets/images/specials/specialsimg4.jpg" alt="Boat Detailing">
+                                    </div>
+                                </a>
                                 <p class="services-item-text"><span>Ends December 31, 2025</span></p>
-                                <h3 class="services-item-title mb-3">SUZUKI MARINE CURRENT REBATES</h3>
-                                <p class="services-item-text">Now through DECEMBER 31ST, 2025, Suzuki Marine is offering ‘TIS THE SEASON OF SAVINGS, MVL REBATES on any qualifying 2.5hp-350hp engines up to $500*. There is no better time to purchase the ULTIMATE outboard for your new boat package or to repower your current boat. ...</p>
+                                <a href="specials-details.html">
+                                    <h3 class="services-item-title mb-3">SUZUKI MARINE CURRENT REBATES</h3>
+                                </a>
+                                <p class="services-item-text">Now through DECEMBER 31ST, 2025, Suzuki Marine is offering
+                                    ‘TIS THE SEASON OF SAVINGS, MVL REBATES on any qualifying 2.5hp-350hp engines up to
+                                    $500*. There is no better time to purchase the ULTIMATE outboard for your new boat
+                                    package or to repower your current boat. ...</p>
                             </div>
 
                             <!-- Specials -->
                             <div class="col-lg-6 services-grid-item">
-                                <div class="services-img-wrapper">
-                                    <img src="./assets/images/specials/specialsimg5.jpg" alt="Boat Detailing">
-                                </div>
+                                <a href="specials-details.html">
+                                    <div class="services-img-wrapper">
+                                        <img src="./assets/images/specials/specialsimg5.jpg" alt="Boat Detailing">
+                                    </div>
+                                </a>
                                 <p class="services-item-text"><span>Ends December 31, 2025</span></p>
-                                <h3 class="services-item-title mb-3">SUZUKI EXTENDED PROTECTION</h3>
-                                <p class="services-item-text">Enjoy worry-free hours on the water with Suzuki Extended Protection coverage. Suzuki boat owners love to spend time fishing, swimming, diving, exploring, or just cruising on the open water to relax and enjoy new horizons. While Suzuki marine products are known for powerful ...</p>
+                                <a href="specials-details.html">
+                                    <h3 class="services-item-title mb-3">SUZUKI EXTENDED PROTECTION</h3>
+                                </a>
+                                <p class="services-item-text">Enjoy worry-free hours on the water with Suzuki Extended
+                                    Protection coverage. Suzuki boat owners love to spend time fishing, swimming,
+                                    diving, exploring, or just cruising on the open water to relax and enjoy new
+                                    horizons. While Suzuki marine products are known for powerful ...</p>
                             </div>
 
                             <!-- Specials -->
                             <div class="col-lg-6 services-grid-item">
-                                <div class="services-img-wrapper">
-                                    <img src="./assets/images/specials/specialsimg6.jpg" alt="Boat Detailing">
-                                </div>
+                                <a href="specials-details.html">
+                                    <div class="services-img-wrapper">
+                                        <img src="./assets/images/specials/specialsimg6.jpg" alt="Boat Detailing">
+                                    </div>
+                                </a>
                                 <p class="services-item-text"><span>Ends December 31, 2025</span></p>
-                                <h3 class="services-item-title mb-3">SUZUKI 4-4-2 PROGRAM</h3>
-                                <p class="services-item-text">Suzuki Marine USA has introduced a new promotional program for its dealers to help move boaters into cleaner, more fuel-efficient 4-stroke outboards while properly recycling their old 2-strokes. Suzuki dealers can receive additional discounts that can be passed along to custo ...</p>
+                                <a href="specials-details.html">
+                                    <h3 class="services-item-title mb-3">SUZUKI 4-4-2 PROGRAM</h3>
+                                </a>
+                                <p class="services-item-text">Suzuki Marine USA has introduced a new promotional program
+                                    for its dealers to help move boaters into cleaner, more fuel-efficient 4-stroke
+                                    outboards while properly recycling their old 2-strokes. Suzuki dealers can receive
+                                    additional discounts that can be passed along to custo ...</p>
                             </div>
 
                             <!-- Specials -->
                             <div class="col-lg-6 services-grid-item">
-                                <div class="services-img-wrapper">
-                                    <img src="./assets/images/specials/specialsimg7.jpg" alt="Boat Detailing">
-                                </div>
+                                <a href="specials-details.html">
+                                    <div class="services-img-wrapper">
+                                        <img src="./assets/images/specials/specialsimg7.jpg" alt="Boat Detailing">
+                                    </div>
+                                </a>
                                 <p class="services-item-text"><span>Ends December 31, 2025</span></p>
-                                <h3 class="services-item-title mb-3">Honda Marine FINANCIAL SERVICES</h3>
-                                <p class="services-item-text">As the only company that carries the Honda name, Honda Financial Services offers you the rates and flexible terms to buy the boat or motor you want. ...</p>
+                                <a href="specials-details.html">
+                                    <h3 class="services-item-title mb-3">Honda Marine FINANCIAL SERVICES</h3>
+                                </a>
+                                <p class="services-item-text">As the only company that carries the Honda name, Honda
+                                    Financial Services offers you the rates and flexible terms to buy the boat or motor
+                                    you want. ...</p>
                             </div>
 
                             <!-- Specials -->
                             <div class="col-lg-6 services-grid-item">
-                                <div class="services-img-wrapper">
-                                    <img src="./assets/images/specials/specialsimg8.jpg" alt="Boat Detailing">
-                                </div>
+                                <a href="specials-details.html">
+                                    <div class="services-img-wrapper">
+                                        <img src="./assets/images/specials/specialsimg8.jpg" alt="Boat Detailing">
+                                    </div>
+                                </a>
                                 <p class="services-item-text"><span>Ends December 31, 2025</span></p>
-                                <h3 class="services-item-title mb-3">AlumaCraft MILITARY & FIRST RESPONDERS</h3>
-                                <p class="services-item-text">Alumacraft is proud to offer an exclusive discount of up to $1,000 on select models to those who serve or have served for their great country. Conditions apply. Contact a dealer for more information. ...</p>
+                                <a href="specials-details.html">
+                                    <h3 class="services-item-title mb-3">AlumaCraft MILITARY & FIRST RESPONDERS</h3>
+                                </a>
+                                <p class="services-item-text">Alumacraft is proud to offer an exclusive discount of up
+                                    to $1,000 on select models to those who serve or have served for their great
+                                    country. Conditions apply. Contact a dealer for more information. ...</p>
                             </div>
 
                             <!-- Specials -->
                             <div class="col-lg-6 services-grid-item">
-                                <div class="services-img-wrapper">
-                                    <img src="./assets/images/specials/specialsimg9.jpg" alt="Boat Detailing">
-                                </div>
+                                <a href="specials-details.html">
+                                    <div class="services-img-wrapper">
+                                        <img src="./assets/images/specials/specialsimg9.jpg" alt="Boat Detailing">
+                                    </div>
+                                </a>
                                 <p class="services-item-text"><span>Ends December 31, 2025</span></p>
-                                <h3 class="services-item-title mb-3">MirroCraft INSTANT REBATES OF $250</h3>
-                                <p class="services-item-text">This special program is available on all Troller, Outfitter, Holiday, Dual Impact, and Aggressor models (Utility models excluded). Promotion Rules ...</p>
+                                <a href="specials-details.html">
+                                    <h3 class="services-item-title mb-3">MirroCraft INSTANT REBATES OF $250</h3>
+                                </a>
+                                <p class="services-item-text">This special program is available on all Troller,
+                                    Outfitter, Holiday, Dual Impact, and Aggressor models (Utility models excluded).
+                                    Promotion Rules ...</p>
                             </div>
 
 
