--- a/storage.html
+++ b/storage.html
@@ -220,8 +220,10 @@
                     <div id="mobile-company" class="accordion-body pb-3" style="display: none;">
                         <ul class="list-unstyled pl-3">
                             <li class="py-2"><a href="about.html" class="text-teal">About Us</a></li>
-                            <li class="py-2"><a href="mission-statement.html" class="text-teal">Mission Statement</a></li>
-                            <li class="py-2"><a href="gold-star-membership.html" class="text-teal">Gold Star Membership</a></li>
+                            <li class="py-2"><a href="mission-statement.html" class="text-teal">Mission Statement</a>
+                            </li>
+                            <li class="py-2"><a href="gold-star-membership.html" class="text-teal">Gold Star
+                                    Membership</a></li>
                             <li class="py-2"><a href="events-promos.html" class="text-teal">Events & Promos</a></li>
                             <li class="py-2"><a href="news-articles.html" class="text-teal">News & Articles</a></li>
                             <li class="py-2"><a href="meet-our-crew.html" class="text-teal">Meet Our Crew</a></li>
@@ -279,7 +281,7 @@
             <img src="./assets/images/storage/banner-img.png" alt="Outdoor Winter Boat Storage" class="hero-bg-img">
             <div class="hero-overlay"></div>
             <div class="hero-content">
-                <h1 class="hero-title">Outdoor Winter Boat  <br>Storage</h1>
+                <h1 class="hero-title">Outdoor Winter Boat <br>Storage</h1>
                 <a href="#form-storage-section" id="storage-request-btn" class="btn-global">Request Storage</a>
             </div>
         </section>
@@ -292,8 +294,12 @@
                     <div class="col-lg-11 text-center">
                         <h2 class="section-title-alt mb-lg-4 mb-3">Secure, Stress-Free Boat Storage</h2>
                         <div class="service-intro-content">
-                            <p class="mb-4">Storing your boat won’t be a hassle any longer! Our team at Starboard Choice Marine is here to help. Our outdoor boat storage space is secure and safe, giving you peace of mind when it’s time to store your vessel. Visit us in Edwardsburg, MI, to learn more!</p>
-                            <a href="#form-storage-section" id="storage-request-btn-2" class="btn-outline-teal">Request Storage</a>
+                            <p class="mb-4">Storing your boat won’t be a hassle any longer! Our team at Starboard Choice
+                                Marine is here to help. Our outdoor boat storage space is secure and safe, giving you
+                                peace of mind when it’s time to store your vessel. Visit us in Edwardsburg, MI, to learn
+                                more!</p>
+                            <a href="#form-storage-section" id="storage-request-btn-2"
+                                class="btn-outline-global">Request Storage</a>
                         </div>
                     </div>
                 </div>
@@ -309,9 +315,13 @@
                         <div class="about-content-wrapper p-lg-5 p-4">
                             <div class="about-content">
                                 <h3 class="about-title mb-4">Storing Your Boat Outdoors</h3>
-                                <p class="about-text mb-lg-4 mb-3">Storing your boat outdoors offers a variety of benefits that make it a popular option among boat owners. Starboard Choice Marine can help with your boat storage needs! Visit us in Edwardsburg, MI, to learn more and submit a storage request.
+                                <p class="about-text mb-lg-4 mb-3">Storing your boat outdoors offers a variety of
+                                    benefits that make it a popular option among boat owners. Starboard Choice Marine
+                                    can help with your boat storage needs! Visit us in Edwardsburg, MI, to learn more
+                                    and submit a storage request.
                                 </p>
-                                <a href="#form-storage-section" id="storage-request-btn-3" class="btn-outline-global d-inline-flex">Request Storage</a>
+                                <a href="#form-storage-section" id="storage-request-btn-3"
+                                    class="btn-outline-global d-inline-flex">Request Storage</a>
                             </div>
                         </div>
                     </div>
@@ -340,11 +350,15 @@
                             <div class="col-lg-6 mb-lg-5 mb-3">
                                 <div class="Starboard-storage-item">
                                     <div class="mr-4">
-                                        <img src="./assets/images/storage/affordability.png" class="" alt="Affordability">
+                                        <img src="./assets/images/storage/affordability.png" class=""
+                                            alt="Affordability">
                                     </div>
                                     <div>
                                         <h3 class="services-item-title mb-3">Affordability</h3>
-                                        <p class="services-item-text">One of the main advantages of outdoor boat storage is affordability. Compared to indoor storage options, storing your boat outdoors is much more cost-effective, allowing you to save money while still keeping your vessel safe and secure.
+                                        <p class="services-item-text">One of the main advantages of outdoor boat storage
+                                            is affordability. Compared to indoor storage options, storing your boat
+                                            outdoors is much more cost-effective, allowing you to save money while still
+                                            keeping your vessel safe and secure.
                                         </p>
                                     </div>
                                 </div>
@@ -357,7 +371,12 @@
                                     </div>
                                     <div>
                                         <h3 class="services-item-title mb-3">Space</h3>
-                                        <p class="services-item-text">Another benefit of outdoor boat storage is the availability of space. With ample outdoor storage space, you can find a spot that fits your boat perfectly, ensuring that it stays protected from the elements while also being easily accessible. Additionally, storing your boat outdoors gives you the flexibility to come and go as you please, without having to worry about navigating enclosed spaces or tight corners.
+                                        <p class="services-item-text">Another benefit of outdoor boat storage is the
+                                            availability of space. With ample outdoor storage space, you can find a spot
+                                            that fits your boat perfectly, ensuring that it stays protected from the
+                                            elements while also being easily accessible. Additionally, storing your boat
+                                            outdoors gives you the flexibility to come and go as you please, without
+                                            having to worry about navigating enclosed spaces or tight corners.
                                         </p>
                                     </div>
                                 </div>
@@ -370,7 +389,12 @@
                                     </div>
                                     <div>
                                         <h3 class="services-item-title mb-3">Security</h3>
-                                        <p class="services-item-text">One of the most important aspects of outdoor boat storage is security. With the right storage facility, you can rest assured that your boat is safe from theft, vandalism, and other potential risks. At Starboard Choice Marine, for example, we prioritize security and safety by providing a fully fenced and gated facility, video surveillance, and attentive staff who monitor the premises.
+                                        <p class="services-item-text">One of the most important aspects of outdoor boat
+                                            storage is security. With the right storage facility, you can rest assured
+                                            that your boat is safe from theft, vandalism, and other potential risks. At
+                                            Starboard Choice Marine, for example, we prioritize security and safety by
+                                            providing a fully fenced and gated facility, video surveillance, and
+                                            attentive staff who monitor the premises.
                                         </p>
                                     </div>
                                 </div>
@@ -383,7 +407,12 @@
                                     </div>
                                     <div>
                                         <h3 class="services-item-title mb-3">Shrink Wrap</h3>
-                                        <p class="services-item-text">One of the most important aspects of outdoor boat storage is security. With the right storage facility, you can rest assured that your boat is safe from theft, vandalism, and other potential risks. At Starboard Choice Marine, for example, we prioritize security and safety by providing a fully fenced and gated facility, video surveillance, and attentive staff who monitor the premises.
+                                        <p class="services-item-text">One of the most important aspects of outdoor boat
+                                            storage is security. With the right storage facility, you can rest assured
+                                            that your boat is safe from theft, vandalism, and other potential risks. At
+                                            Starboard Choice Marine, for example, we prioritize security and safety by
+                                            providing a fully fenced and gated facility, video surveillance, and
+                                            attentive staff who monitor the premises.
                                         </p>
                                     </div>
                                 </div>
