--- a/trade.html
+++ b/trade.html
@@ -220,8 +220,10 @@
                     <div id="mobile-company" class="accordion-body pb-3" style="display: none;">
                         <ul class="list-unstyled pl-3">
                             <li class="py-2"><a href="about.html" class="text-teal">About Us</a></li>
-                            <li class="py-2"><a href="mission-statement.html" class="text-teal">Mission Statement</a></li>
-                            <li class="py-2"><a href="gold-star-membership.html" class="text-teal">Gold Star Membership</a></li>
+                            <li class="py-2"><a href="mission-statement.html" class="text-teal">Mission Statement</a>
+                            </li>
+                            <li class="py-2"><a href="gold-star-membership.html" class="text-teal">Gold Star
+                                    Membership</a></li>
                             <li class="py-2"><a href="events-promos.html" class="text-teal">Events & Promos</a></li>
                             <li class="py-2"><a href="news-articles.html" class="text-teal">News & Articles</a></li>
                             <li class="py-2"><a href="meet-our-crew.html" class="text-teal">Meet Our Crew</a></li>
@@ -297,12 +299,18 @@
                             </div>
                             <div class="col-lg-7">
                                 <div class="service-intro-content">
-                                    <p class="mb-4 text-lg-left text-center">Trading in your boat doesn’t have to be complicated. At Starboard Choice Marine, we make the process simple, transparent, and fair—so you can move into your next boat with confidence. Whether you’re upgrading, downsizing, or ready for something new, our experienced team will provide an honest evaluation and competitive trade value based on current market conditions.</p>
+                                    <p class="mb-4 text-lg-left text-center">Trading in your boat doesn’t have to be
+                                        complicated. At Starboard Choice Marine, we make the process simple,
+                                        transparent, and fair—so you can move into your next boat with confidence.
+                                        Whether you’re upgrading, downsizing, or ready for something new, our
+                                        experienced team will provide an honest evaluation and competitive trade value
+                                        based on current market conditions.</p>
                                 </div>
                             </div>
                         </div>
                         <div class="text-center mt-3">
-                            <a href="#form-trade-section" id="trade-boat-btn-2" class="btn-outline-teal">Start Selling Your Boat</a>
+                            <a href="#form-trade-section" id="trade-boat-btn-2" class="btn-outline-global">Start Selling
+                                Your Boat</a>
                         </div>
                     </div>
                 </div>
@@ -321,39 +329,47 @@
                         <div class="row">
                             <!-- Tell Us About Your Boat -->
                             <div class="col-lg-4 mb-lg-5 mb-3">
-                                <div class="">
+                                <div class="text-lg-left text-center">
                                     <div class="mb-4">
-                                        <img src="./assets/images/trade/genuine.png" class="" alt="Tell Us About Your Boat">
+                                        <img src="./assets/images/trade/genuine.png" class=""
+                                            alt="Tell Us About Your Boat">
                                     </div>
                                     <div>
                                         <h3 class="services-item-title mb-3">Tell Us About Your Boat</h3>
-                                        <p class="services-item-text">Share a few details about your boat, including the make, model, year, and condition. Photos and service history help us provide the most accurate estimate.
+                                        <p class="services-item-text">Share a few details about your boat, including the
+                                            make, model, year, and condition. Photos and service history help us provide
+                                            the most accurate estimate.
                                         </p>
                                     </div>
                                 </div>
                             </div>
                             <!-- Get a Fair Market Evaluation -->
                             <div class="col-lg-4 mb-lg-5 mb-3">
-                                <div class="">
+                                <div class="text-lg-left text-center">
                                     <div class="mb-4">
-                                        <img src="./assets/images/trade/support.png" class="" alt="Get a Fair Market Evaluation">
+                                        <img src="./assets/images/trade/support.png" class=""
+                                            alt="Get a Fair Market Evaluation">
                                     </div>
                                     <div>
                                         <h3 class="services-item-title mb-3">Get a Fair Market Evaluation</h3>
-                                        <p class="services-item-text">Our team reviews your information and determines a competitive trade-in value using market data and condition—no pressure, no surprises.
+                                        <p class="services-item-text">Our team reviews your information and determines a
+                                            competitive trade-in value using market data and condition—no pressure, no
+                                            surprises.
                                         </p>
                                     </div>
                                 </div>
                             </div>
                             <!-- Trade In & Upgrade -->
                             <div class="col-lg-4 mb-lg-5 mb-3">
-                                <div class="">
+                                <div class="text-lg-left text-center">
                                     <div class="mb-4">
                                         <img src="./assets/images/trade/serving.png" class="" alt="Trade In & Upgrade">
                                     </div>
                                     <div>
                                         <h3 class="services-item-title mb-3">Trade In & Upgrade</h3>
-                                        <p class="services-item-text">Apply your trade-in value toward your next boat and let us handle the paperwork. We make the transition smooth so you can focus on getting back on the water.
+                                        <p class="services-item-text">Apply your trade-in value toward your next boat
+                                            and let us handle the paperwork. We make the transition smooth so you can
+                                            focus on getting back on the water.
                                         </p>
                                     </div>
                                 </div>
@@ -372,7 +388,7 @@
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-lg-8">
-                        <div class="text-center mb-5">
+                        <div class="text-center mb-lg-5 mb-3">
                             <h2 class="section-title-alt">Start Selling Your Boat</h2>
                         </div>
                         <form action="#" class="request-service-form">
